# moda

./: .ai-jail  AGENTS.md  Cargo.toml  IMPROVEMENTS.md  MILESTONES.md  README.md  config.toml  justfile
.windsurf/skills/guidance/: SKILL.md
.windsurf/workflows/: review-basic.md  review-full.md  tdd-scaffold.md
scripts/VMs/: create_windows_vm.sh
src/: config.rs  error.rs  lib.rs  main.rs  ui.rs
src/games/: config.rs  mad_max.rs  marvel_rivals.rs  mod.rs  stardew.rs
src/mods/: catalog.rs  enabler.rs  installer.rs  mod.rs  mod_registry.rs  mod_state.rs  nexus.rs  sync_manager.rs  types.rs
src/mods/downloader/: mod.rs  nexus.rs
src/mods/enabler/: direct_copy_enabler.rs  mod.rs  symlink_enabler.rs
src/mods/installer/: direct_copy_installer.rs  mod.rs  zip_installer.rs
src/mods/orchestrator/: mod.rs  sync_manager.rs
src/mods/repository/: mod.rs  mod_repo.rs
src/mods/stager/: direct_copy_stager.rs  mod.rs  rar_stager.rs  zip_stager.rs
src/ui/: active_game.rs  app.rs  components.rs  message.rs  mod.rs  style.rs  styles.rs  update.rs  view.rs  views.rs
src/ui/components/: game_card.rs  log_panel.rs  mod_row.rs  sidebar.rs
src/ui/pages/: game_selection.rs  mod.rs  mod_manager.rs
src/ui/views/: downloads.rs  game_select.rs  mods.rs
src/ui/widgets/: dir_browser.rs  mod.rs
tests/: config_test.rs  mod.rs
tests/games/: mad_max.rs  mod.rs  stardew.rs  stardew_test.rs
tests/mods/: catalog_test.rs  enabler_test.rs  installer_test.rs  mod.rs  mod_registry_test.rs  mod_state_test.rs  nexus.rs  sync_manager_test.rs  test_util.rs
tests/mods/downloader/: mod.rs  nexus_test.rs
tests/mods/enabler/: enabler_test.rs  mod.rs  symlink_enabler_test.rs
tests/mods/installer/: direct_copy_installer_test.rs  mod.rs  zip_installer_test.rs
tests/mods/orchestrator/: mod.rs  sync_manager_test.rs
(+6 files in other folders)
