[package]
name = "moda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moda"
path = "src/main.rs"

[lib]
name = "moda"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0"
toml = "0.8"
dirs = "6.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "8.6.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
log-panics = "2.1"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.0"
