[package]
name = "moda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moda"
path = "src/main.rs"

[lib]
name = "moda"
path = "src/lib.rs"

[dependencies]
toml = "0.8"
dirs = "6.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "8.6.0"
unrar = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11.10", features = ["auto-color", "humantime"] }
log-panics = "2.1"
egui = { version = "0.34.2", default-features = false, features = ["default_fonts"] }
eframe = "0.34.2"
sevenz-rust2 = { version = "0.20" }
turso = "0.6.1"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.0"
